--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -3,3 +3,20 @@ body{
     background-image: url("/assets/images/seesaw.jpg");
     background-position: center center;
 }
+
+#login{
+     float:right;
+border: lightblue solid 2px;
+ }
+
+h1{
+    color: darkgoldenrod;
+    text-align: center;
+}
+
+h3{
+    color: lightslategray;
+    text-align: center;
+
+
+}
