1st attempt at footer nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,13 @@
     display:inline-block;
 }
 
-.bottom p{
+
+.bottom {
     display:inline-block;
 }
 
-
+.bottom li{
+    display:inline-block;
+    float: right;
+    padding: 15px;
+}
