Add forecast logo to top of page and put in letter spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,11 @@ a.youtube {
     background-repeat: no-repeat;
 }
 
+.logo{
+    color: darkgoldenrod;
+    letter-spacing: 0.1em;
+}
+
+a:link{
+    text-decoration: none;
+}
