--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,4 @@
-.connect{
-    display:inline-block;
-}
 
-
-.bottom nav{
-    display:inline-block;
-}
 
 nav>ul>li{
     list-style-type: none;
@@ -23,4 +16,13 @@ a.youtube {
 
 a:link{
     text-decoration: none;
+}
+
+
+.forecast{
+    color: darkgoldenrod;
+}
+
+body{
+    background-color: #DFE9FF;
 }
