putting in more code annotation

--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -1,3 +1,10 @@
+/*
+Creator: Pauline Cairns
+Date: 11/03/2019
+Purpose: Page provides css for homepage
+*/
+
+
 /* Make login at top right hand corner */
 .right{
     float:right;
