--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -1,3 +1,10 @@
+/*
+Creator: Pauline Cairns
+Date: 11/03/2019
+Purpose: Page provides css for tables across the app
+*/
+
+
 td, th {
     text-align: left;
 }
