getting overview page to only show if jr001 selected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,3 +96,11 @@ footer{
 .navbar-text2{
     padding-right: 150px;
 }
+
+.denied{
+    justify-content: center;
+}
+
+.small{
+    font-size: 9px;
+}
